- (djm) More NeXT compatibility from Ben Lindstrom <mouring@pconline.com>    Including sigaction() et al. replacements

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
  - (djm) Cleanup entropy collection code a little more. Split initialisation
    from seeding, perform intialisation immediatly at start, be careful with
    uids. Based on problem report from Jim Watt <jimw@peisj.pebio.com>
+ - (djm) More NeXT compatibility from Ben Lindstrom <mouring@pconline.com>
+   Including sigaction() et al. replacements
 
 20000708
  - (djm) Fix bad fprintf format handling in auth-pam.c. Patch from 
