- (djm) NeXT: dirent structures to get scp working from Ben Lindstrom    <mouring@pconline.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - (djm) Fixup for AIX getuserattr() support from Tom Bertelson
    <tbert@abac.com>
  - (djm) ReliantUNIX support from Udo Schweigert <ust@cert.siemens.de>
+ - (djm) NeXT: dirent structures to get scp working from Ben Lindstrom 
+   <mouring@pconline.com>
 
 20000709
  - (djm) Only enable PAM_TTY kludge for Linux. Problem report from
