--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
  - (djm) Replaced bsd-snprintf.c with one from Mutt source tree, it is known
    to compile on more platforms (incl NeXT).
  - (djm) Added bsd-inet_aton and configure support for NeXT
+ - (djm) Misc NeXT fixes from Ben Lindstrom <mouring@pconline.com>
 
 20000709
  - (djm) Only enable PAM_TTY kludge for Linux. Problem report from
