--- a/ChangeLog
+++ b/ChangeLog
@@ -50,6 +50,8 @@
      [cipher.c kex.c servconf.c]
      strtok() --> strsep(). (niels@ ok)
  - (djm) Fix problem with debug mode and MaxStartups
+ - (djm) Don't generate host keys when $(DESTDIR) is set (e.g. during RPM
+   builds)
 
 20000709
  - (djm) Only enable PAM_TTY kludge for Linux. Problem report from
