--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 20000712
- - Remove -lresolve for Reliant Unix
+ - (djm) Remove -lresolve for Reliant Unix
  - (djm) OpenBSD CVS Updates:
    - deraadt@cvs.openbsd.org 2000/07/11 02:11:34
      [session.c sshd.c ]
@@ -7,6 +7,8 @@
    - deraadt@cvs.openbsd.org 2000/07/11 13:17:45
      [readconf.c ssh_config]
      disable FallBackToRsh by default
+ - (djm) Replace in_addr_t with u_int32_t in bsd-inet_aton.c. Report from
+   Ben Lindstrom <mouring@pconline.com>
 
 20000711
  - (djm) Fixup for AIX getuserattr() support from Tom Bertelson
