--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000808
+ - (djm) Cleanup Redhat RPMs. Generate keys at runtime rather than install
+   time, spec file cleanup.
+
 20000807
  - (djm) Set 0755 on binaries during install. Report from Lutz Jaenicke
  - (djm) Suppress error messages on channel close shutdown() failurs
