--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20000809
+ - (djm) Define AIX hard limits if headers don't. Report from 
+   Bill Painter <william.t.painter@lmco.com>
+
 20000808
  - (djm) Cleanup Redhat RPMs. Generate keys at runtime rather than install
    time, spec file cleanup.
