- (djm) More SunOS 4.1.x fixes from Nate Itkin <nitkin@europa.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20000815
+ - (djm) More SunOS 4.1.x fixes from Nate Itkin <nitkin@europa.com>
+
 20000813
  - (djm) Add $(srcdir) to includes when compiling (for VPATH). Report from
    Fabrice bacchella <fabrice.bacchella@marchfirst.fr>
