--- a/scp.1
+++ b/scp.1
@@ -9,7 +9,7 @@
 .\"
 .\" Created: Sun May  7 00:14:37 1995 ylo
 .\"
-.\" $Id$
+.\" $OpenBSD: scp.1,v 1.13 2000/10/16 09:38:44 djm Exp $
 .\"
 .Dd September 25, 1999
 .Dt SCP 1
