--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@
      - more strict prototypes, include necessary headers
      - use paths.h/pathnames.h decls
      - size_t typecase to int -> u_long
+ - (bal) Missing 'const' in readpass.h
 
 20010208
  - (djm) Don't delete external askpass program in make uninstall target.
