--- a/ChangeLog
+++ b/ChangeLog
@@ -48,6 +48,8 @@
    - djm@cvs.openbsd.org 2001/02/06 23:30:28
      [sftp-client.c]
      replace arc4random with counter for request ids; ok markus@
+ - (djm) Define _PATH_TTY for systems that don't. Report from Lutz 
+   Jaenicke <Lutz.Jaenicke@aet.TU-Cottbus.DE>
 
 20010208
  - (djm) Don't delete external askpass program in make uninstall target.
