--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,8 @@
    - danh@cvs.openbsd.org 2001/02/10 15:14:11
      [scp.c]
      fix memory leak; ok markus@
+ - (bal) Minor correction to sftp-client.c I made.  Should return 'status'
+   instead of '0'  (from the OpenBSD tree)
 
 20010210
  - (djm) Sync sftp and scp stuff from OpenBSD:
