--- a/ChangeLog
+++ b/ChangeLog
@@ -21,12 +21,12 @@
    - danh@cvs.openbsd.org 2001/02/10 15:14:11
      [scp.c]
      fix memory leak; ok markus@
- - (bal) Minor correction to sftp-client.c I made.  Should return 'status'
-   instead of '0'  (from the OpenBSD tree)
- - OpenBSD Sync
    - djm@cvs.openbsd.org 2001/02/10 0:45:52
      [scp.1]
      Mention that you can quote pathnames with spaces in them
+ - (bal) Minor correction to sftp-client.c I made.  Should return 'status'
+   instead of '0'  (from the OpenBSD tree)
+ - (bal) Synced ssh.1 w/ OpenBSD
 
 20010210
  - (djm) Sync sftp and scp stuff from OpenBSD:
