--- a/ChangeLog
+++ b/ChangeLog
@@ -43,9 +43,8 @@
    - markus@cvs.openbsd.org 2001/02/10 12:09:21
      [sshconnect2.c]
      remove some lines
- - (bal) Minor correction to sftp-client.c I made.  Should return 'status'
    instead of '0'  (from the OpenBSD tree)
- - (bal) Synced ssh.1 w/ OpenBSD
+ - (bal) Synced ssh.1 and sshd.8 w/ OpenBSD
 
 20010210
  - (djm) Sync sftp and scp stuff from OpenBSD:
