--- a/ChangeLog
+++ b/ChangeLog
@@ -61,6 +61,7 @@
  - (bal) fixed sftp-client.c.  Return 'status' instead of '0'  
    (from the OpenBSD tree)
  - (bal) Synced ssh.1 and sshd.8 w/ OpenBSD
+ - (bal) sftp-sever.c  '%8lld' to '%8llu' (OpenBSD Sync)
 
 20010210
  - (djm) Sync sftp and scp stuff from OpenBSD:
