--- a/ChangeLog
+++ b/ChangeLog
@@ -60,7 +60,7 @@
      snprintf
  - (bal) fixed sftp-client.c.  Return 'status' instead of '0'  
    (from the OpenBSD tree)
- - (bal) Synced ssh.1 and sshd.8 w/ OpenBSD
+ - (bal) Synced ssh.1, ssh-add.1 and sshd.8 w/ OpenBSD
  - (bal) sftp-sever.c  '%8lld' to '%8llu' (OpenBSD Sync)
 
 20010210
