--- a/ChangeLog
+++ b/ChangeLog
@@ -104,6 +104,7 @@
  - (bal) A bit more whitespace cleanup
  - (djm) Set PAM_RHOST earlier, patch from Andrew Bartlett 
    <abartlet@pcug.org.au>
+ - (stevesk) misc.c: ssh.h not needed.
 
 20010210
  - (djm) Sync sftp and scp stuff from OpenBSD:
