--- a/ChangeLog
+++ b/ChangeLog
@@ -105,6 +105,7 @@
  - (djm) Set PAM_RHOST earlier, patch from Andrew Bartlett 
    <abartlet@pcug.org.au>
  - (stevesk) misc.c: ssh.h not needed.
+ - (stevesk) compat.c: more friendly cpp error
  - (stevesk) OpenBSD sync:
    - stevesk@cvs.openbsd.org 2001/02/11 06:15:57
      [LICENSE]
