--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+20010212
+ - (djm) Update Redhat specfile to allow --define "skip_x11_askpass 1", 
+   --define "skip_gnome_askpass 1", --define "rh7 1" and make the 
+   implicit rpm-3.0.5 dependancy explicit. Patch and suggestions from 
+   Pekka Savola <pekkas@netcore.fi>
+
 20010211
  - (bal) OpenBSD Sync
    - markus@cvs.openbsd.org 2001/02/07 22:35:46
