--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    --define "skip_gnome_askpass 1", --define "rh7 1" and make the 
    implicit rpm-3.0.5 dependancy explicit. Patch and suggestions from 
    Pekka Savola <pekkas@netcore.fi>
+ - (djm) Clean up PCRE text in INSTALL
 
 20010211
  - (bal) OpenBSD Sync
