--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010213
+ - (bal) added NeXT work around for bsd-snprintf.c in bsd-nextstep.h.
+ - (bal) added TODO item to clean up and sort out 'varargs' from 'stdargs'
+
 20010212
  - (djm) Update Redhat specfile to allow --define "skip_x11_askpass 1", 
    --define "skip_gnome_askpass 1", --define "rh7 1" and make the 
