- (bal) Use chown() if fchown() does not exist in ftp-server.c patch by    Tim Rice <tim@multitalents.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  - (bal) Cleaned out bsd-snprintf.c.  VARARGS have been banished and
    I did a base KNF over the whe whole file to make it more acceptable.
    (backed out of original patch and removed it from ChangeLog)
+ - (bal) Use chown() if fchown() does not exist in ftp-server.c patch by
+   Tim Rice <tim@multitalents.net>
 
 20010212
  - (djm) Update Redhat specfile to allow --define "skip_x11_askpass 1", 
