--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
    (backed out of original patch and removed it from ChangeLog)
  - (bal) Use chown() if fchown() does not exist in ftp-server.c patch by
    Tim Rice <tim@multitalents.net>
+ - (stevesk) auth1.c: fix PAM passwordless check.
 
 20010212
  - (djm) Update Redhat specfile to allow --define "skip_x11_askpass 1", 
