--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010215
+ - (djm) Move PAM session setup back to before setuid to user. Fixes 
+   problems on Solaris-derived PAMs.
+
 20010214
  - (djm) Don't try to close PAM session or delete credentials if the
    session has not been open or credentials not set. Based on patch from 
