--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20010215
  - (djm) Move PAM session setup back to before setuid to user. Fixes 
    problems on Solaris-derived PAMs.
+ - (djm) Clean up PAM namespace. Suggested by Darren Moffat
+   <Darren.Moffat@eng.sun.com>
 
 20010214
  - (djm) Don't try to close PAM session or delete credentials if the
