--- a/ChangeLog
+++ b/ChangeLog
@@ -36,8 +36,9 @@
      [sftp-client.c sftp-int.c sftp.1]
      Fix and document 'preserve modes & times' option ('-p' flag in sftp);
      ok markus@
- - replaced PATH_MAX in sftp-int.c w/ MAXPATHLEN.
- 
+ - (bal) replaced PATH_MAX in sftp-int.c w/ MAXPATHLEN.
+ - (djm) Move to Jim's 1.2.0 X11 askpass program
+
 20010214
  - (djm) Don't try to close PAM session or delete credentials if the
    session has not been open or credentials not set. Based on patch from 
