--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010216
+ - (bal) added '--with-prce'  to allow overriding of system regex when
+   required (tested by David Dulek <ddulek@fastenal.com>)
+
 20010215
  - (djm) Move PAM session setup back to before setuid to user. Fixes 
    problems on Solaris-derived PAMs.
