--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - (bal) added '--with-prce'  to allow overriding of system regex when
    required (tested by David Dulek <ddulek@fastenal.com>)
  - (bal) Added DG/UX case and set that they have a broken IPTOS.
+ - (djm) Mini-configure reorder patch from Tim Rice <tim@multitalents.net>
+   Fixes linking on SCO.
 
 20010215
  - (djm) Move PAM session setup back to before setuid to user. Fixes 
