--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,8 @@
      genericize password padding function for SSH1 and SSH2.
      add stylized echo to 2, too.
  - (djm) Add roundup() macro to defines.h
+ - (stevesk) set SA_RESTART flag in mysignal() for SIGCHLD;
+   needed on Unixware 2.x.
 
 20010215
  - (djm) Move PAM session setup back to before setuid to user. Fixes 
