--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010218
+ - (bal) Patch for fix FCHMOD reference in ftp-client.c by Tim Rice 
+   <tim@multitalents.net> 
+
 20010217
  - (bal) OpenBSD Sync:
    - markus@cvs.openbsd.org 2001/02/16 13:38:18
