--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20010218
  - (bal) Patch for fix FCHMOD reference in ftp-client.c by Tim Rice 
    <tim@multitalents.net> 
+ - (Bal) Patch for lack of RA_RESTART in misc.c for mysignal by
+   stevesk
 
 20010217
  - (bal) OpenBSD Sync:
