--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    <tim@multitalents.net> 
  - (Bal) Patch for lack of RA_RESTART in misc.c for mysignal by
    stevesk
+ - (djm) Fix my breaking of cygwin builds, Patch from Corinna Vinschen 
+   <vinschen@redhat.com> and myself.
 
 20010217
  - (bal) OpenBSD Sync:
