--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
    stevesk
  - (djm) Fix my breaking of cygwin builds, Patch from Corinna Vinschen 
    <vinschen@redhat.com> and myself.
+ - (djm) Close listen_sock on bind() failures. Patch from Arkadiusz
+   Miskiewicz <misiek@pld.ORG.PL>
 
 20010217
  - (bal) OpenBSD Sync:
