--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@
    Miskiewicz <misiek@pld.ORG.PL>
  - (djm) Robustify EGD/PRNGd code in face of socket closures. Patch from
    Todd C. Miller <Todd.Miller@courtesan.com>
+ - (djm) Use ttyname() to determine name of tty returned by openpty() 
+   rather then risking overflow. Patch from Marek Michalkiewicz 
+   <marekm@amelek.gda.pl>
 
 20010217
  - (bal) OpenBSD Sync:
