--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@
  - (djm) Use ttyname() to determine name of tty returned by openpty() 
    rather then risking overflow. Patch from Marek Michalkiewicz 
    <marekm@amelek.gda.pl>
+ - (djm) Swapped tests for no_libsocket and no_libnsl in configure.in. 
+   Patch from Marek Michalkiewicz <marekm@amelek.gda.pl>
 
 20010217
  - (bal) OpenBSD Sync:
