--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
    <marekm@amelek.gda.pl>
  - (djm) Swapped tests for no_libsocket and no_libnsl in configure.in. 
    Patch from Marek Michalkiewicz <marekm@amelek.gda.pl>
+ - (djm) Doc fixes from Pekka Savola <pekkas@netcore.fi>
 
 20010217
  - (bal) OpenBSD Sync:
