--- a/README
+++ b/README
@@ -33,8 +33,8 @@ Please send bug reports and patches to the mailing list
 openssh-unix-dev@mindrot.org. The list is open to posting by
 unsubscribed users.
 
-If you are a citizen of the USA or another country which restricts 
-export of cryptographic products, then please refrain from sending 
+If you are a citizen of an USA-embargoed country to which export of 
+cryptographic products is restricted, then please refrain from sending 
 crypto-related code or patches to the list. We cannot accept them.
 Other code contribution are accepted, but please follow the OpenBSD
 style guidelines[6].
