--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
  - (djm) Swapped tests for no_libsocket and no_libnsl in configure.in. 
    Patch from Marek Michalkiewicz <marekm@amelek.gda.pl>
  - (djm) Doc fixes from Pekka Savola <pekkas@netcore.fi>
+ - (djm) Use SA_INTERRUPT along SA_RESTART if present (equivalent for 
+   SunOS)
 
 20010217
  - (bal) OpenBSD Sync:
