- (djm) SCO needs librpc for libwrap. Patch from Tim Rice    <tim@multitalents.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,8 @@
  - (djm) Doc fixes from Pekka Savola <pekkas@netcore.fi>
  - (djm) Use SA_INTERRUPT along SA_RESTART if present (equivalent for 
    SunOS)
+ - (djm) SCO needs librpc for libwrap. Patch from Tim Rice 
+   <tim@multitalents.net>
 
 20010217
  - (bal) OpenBSD Sync:
