- (stevesk) scp.c: use mysignal() for updateprogressmeter() handler.

--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@
  - (djm) SCO needs librpc for libwrap. Patch from Tim Rice 
    <tim@multitalents.net>
  - (stevesk) misc.c: cpp rework of SA_(INTERRUPT|RESTART) handling.
+ - (stevesk) scp.c: use mysignal() for updateprogressmeter() handler.
 
 20010217
  - (bal) OpenBSD Sync:
