--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,8 @@
    <tim@multitalents.net>
  - (stevesk) misc.c: cpp rework of SA_(INTERRUPT|RESTART) handling.
  - (stevesk) scp.c: use mysignal() for updateprogressmeter() handler.
+ - (djm) SA_INTERRUPT is the converse of SA_RESTART, apply it only for 
+   SIGALRM.
 
 20010217
  - (bal) OpenBSD Sync:
