--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,7 @@
  - (stevesk) scp.c: use mysignal() for updateprogressmeter() handler.
  - (djm) SA_INTERRUPT is the converse of SA_RESTART, apply it only for 
    SIGALRM.
+ - (djm) Move entropy.c over to mysignal()
 
 20010217
  - (bal) OpenBSD Sync:
