--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,7 @@
  - (djm) SunOS 4.x also needs to define HAVE_BOGUS_SYS_QUEUE_H as it has 
    a <sys/queue.h> that lacks the TAILQ_* macros. Patch from Todd C. 
    Miller <Todd.Miller@courtesan.com>
+ - (djm) Update RPM spec files for 2.5.0p1
 
 20010217
  - (bal) OpenBSD Sync:
