--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 20010219
  - (bal) Markus' blessing to rename login.[ch] -> sshlogin.[ch] and
    pty.[ch] -> sshpty.[ch]
+ - (djm) Rework search for OpenSSL location. Skip directories which don't
+   exist, don't add -L$ssldir/lib if it doesn't exist. Should help SCO
+   with its limit of 6 -L options.
 
 20010218
  - (bal) Patch for fix FCHMOD reference in ftp-client.c by Tim Rice 
