- (bal) Fixed OpenSSL rework to use $saved_*.  Patch by Tim Rice    <tim@multitalents.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 20010221
  - (bal) Removed -L/usr/ucblib -R/usr/ucblib for Solaris platform.
+ - (bal) Fixed OpenSSL rework to use $saved_*.  Patch by Tim Rice 
+   <tim@multitalents.net>
+
 20010220
  - (bal) Fix mixed up params to memmove() from Jan 5th in setenv.c and
    getcwd.c.
