--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010222                                                             
+ - (bal) Corrected SCO luid patch by svaughan <svaughan@asterion.com>
+
 20010221
  - (bal) Removed -L/usr/ucblib -R/usr/ucblib for Solaris platform.
  - (bal) Fixed OpenSSL rework to use $saved_*.  Patch by Tim Rice 
