- (bal) Added mdoc2man.pl from Mark Roth <roth@feep.net>  - (bal) Removed reference to liblogin from contrib/README.  It was    integrated into OpenSSH a long while ago.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 20010222                                                             
  - (bal) Corrected SCO luid patch by svaughan <svaughan@asterion.com>
+ - (bal) Added mdoc2man.pl from Mark Roth <roth@feep.net>
+ - (bal) Removed reference to liblogin from contrib/README.  It was
+   integrated into OpenSSH a long while ago.
 
 20010221
  - (bal) Removed -L/usr/ucblib -R/usr/ucblib for Solaris platform.
