- (stevesk) remove erroneous #ifdef sgi code.    Michael Stone <mstone@cs.loyola.edu>

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  - (bal) Added mdoc2man.pl from Mark Roth <roth@feep.net>
  - (bal) Removed reference to liblogin from contrib/README.  It was
    integrated into OpenSSH a long while ago.
+ - (stevesk) remove erroneous #ifdef sgi code.
+   Michael Stone <mstone@cs.loyola.edu>
 
 20010221
  - (bal) Removed -L/usr/ucblib -R/usr/ucblib for Solaris platform.
