--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    <tell@telltronics.org>
  - (bal) Patch to force OpenSSH rpm to require the same version of OpenSSL
    that it was compiled against.  Patch by Pekka Savola <pekkas@netcore.fi>
+ - (bal) Double -I for OpenSSL on SCO.  Patch by Tim Rice 
+   <tim@multitalents.net>
 
 20010222                                                             
  - (bal) Corrected SCO luid patch by svaughan <svaughan@asterion.com>
