--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010224
+ - (bal) pam_stack fix to correctly detect between RH7 and older RHs.
+   Patch by Pekka Savola <pekkas@netcore.fi>
+
 20010223
  - (bal) Fix --define rh7 in openssh.spec file.  Patch by Steve Tell
    <tell@telltronics.org>
