--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20010224
  - (bal) pam_stack fix to correctly detect between RH7 and older RHs.
    Patch by Pekka Savola <pekkas@netcore.fi>
+ - (bal) Renamed sigaction.[ch] to sigact.[ch].  Causes problems with
+   some platforms.
 
 20010223
  - (bal) Fix --define rh7 in openssh.spec file.  Patch by Steve Tell
