--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010225
+ - (djm) Use %{_libexecdir} rather than hardcoded path in RPM specfile
+   Patch from Adrian Ho <lexfiend@usa.net>
+
 20010224
  - (bal) Missed part of the UNIX sockets patch.  Patch by Corinna 
    Vinschen <vinschen@redhat.com>
