--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20010225
  - (djm) Use %{_libexecdir} rather than hardcoded path in RPM specfile
    Patch from Adrian Ho <lexfiend@usa.net>
+ - (bal) Replace 'unsigned long long' to 'u_int64_t' since not every
+   platform defines u_int64_t as being that.
 
 20010224
  - (bal) Missed part of the UNIX sockets patch.  Patch by Corinna 
