--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 20010226
+ - (bal) Applied shutdown() patch for sftp.c by  Corinna Vinschen 
+   <vinschen@redhat.com>
+
+20010226
  - (bal) Fixed bsd-snprinf.c so it now honors 'BROKEN_SNPRINTF' again.
  - (djm) Some systems (SCO3, NeXT) have weird saved uid semantics. 
    Based on patch from Tim Rice <tim@multitalents.net>
