--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
    - markus@cvs.openbsd.org 2001/02/23 15:37:45
      [session.c]
      handle SSH_PROTOFLAG_SCREEN_NUMBER for buggy clients
+ - (bal) sshd.init support for all Redhat release.  Patch by Jim Knoble 
+   <jmknoble@jmknoble.cx>
 
 20010226
  - (bal) Fixed bsd-snprinf.c so it now honors 'BROKEN_SNPRINTF' again.
