--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
  - (djm) Fix up POSIX saved uid support. Report from Mark Miller 
    <markm@swoon.net>
  - (djm) Search for -lcrypt on FreeBSD too
+ - (djm) fatal() on OpenSSL version mismatch
 
 20010226
  - (bal) Fixed bsd-snprinf.c so it now honors 'BROKEN_SNPRINTF' again.
