--- a/ChangeLog
+++ b/ChangeLog
@@ -17,7 +17,9 @@
  - (djm) Fix PAM fix
  - (djm) Remove 'noreplace' flag from sshd_config in RPM spec files. This
    change is being made as 2.5.x configfiles are not back-compatible with
-  2.3.x.
+   2.3.x.
+ - (djm) Avoid warnings for missing broken IP_TOS. Patch from Mark Miller
+   <markm@swoon.net>
 
 20010226
  - (bal) Fixed bsd-snprinf.c so it now honors 'BROKEN_SNPRINTF' again.
