--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010228
+ - (djm) Detect endianness in configure and use it in rijndael.c. Fixes
+   "Bad packet length" bugs.
+
 20010227
  - (bal) Applied shutdown() patch for sftp.c by  Corinna Vinschen 
    <vinschen@redhat.com>
