--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20010228
  - (djm) Detect endianness in configure and use it in rijndael.c. Fixes
    "Bad packet length" bugs.
+ - (djm) Fully revert PAM session patch. All PAM session init is now done 
+   before the final fork().
 
 20010227
  - (bal) Applied shutdown() patch for sftp.c by  Corinna Vinschen 
