- (djm) Remove /tmp from EGD socket search list

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
  - (djm) Fully revert PAM session patch (again). All PAM session init is 
    now done before the final fork().
  - (djm) EGD detection patch from Tim Rice <tim@multitalents.net>
+ - (djm) Remove /tmp from EGD socket search list
 
 20010227
  - (bal) Applied shutdown() patch for sftp.c by  Corinna Vinschen 
