--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 20010301
  - (djm) Properly add -lcrypt if needed. 
+ - (djm) Force standard PAM conversation function in a few more places.
+   Patch from Redhat 2.5.1p1-2 RPM, probably Nalin Dahyabhai 
+   <nalin@redhat.com>
 
 20010228
  - (djm) Detect endianness in configure and use it in rijndael.c. Fixes
