--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  - (djm) Force standard PAM conversation function in a few more places.
    Patch from Redhat 2.5.1p1-2 RPM, probably Nalin Dahyabhai 
    <nalin@redhat.com>
+ - (djm) Cygwin needs pw->pw_gecos copied too. Patch from Corinna Vinschen 
+   <vinschen@redhat.com>
 
 20010228
  - (djm) Detect endianness in configure and use it in rijndael.c. Fixes
