--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
    <nalin@redhat.com>
  - (djm) Cygwin needs pw->pw_gecos copied too. Patch from Corinna Vinschen 
    <vinschen@redhat.com>
+ - (djm) Released 2.5.1p2
 
 20010228
  - (djm) Detect endianness in configure and use it in rijndael.c. Fixes
