--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010303
+ - Remove make-ssh-known-hosts.pl, ssh-keyscan is better.
+
 20010301
  - (djm) Properly add -lcrypt if needed. 
  - (djm) Force standard PAM conversation function in a few more places.
