--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010305
+ - (bal) CVS ID touch up on sshpty.[ch] and sshlogin.[ch]
+
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
  - (bal) Updated contrib/README to remove 'make-ssh-known-hosts' and
