--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20010305
  - (bal) CVS ID touch up on sshpty.[ch] and sshlogin.[ch]
+ - (bal) CVS ID touch up on sftp-int.c 
  - (bal) OpenBSD CVS Sync
    - deraadt@cvs.openbsd.org 2001/02/17 23:48:48
      [sshd.8]
