--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
  - (bal) CVS ID touch up on sshpty.[ch] and sshlogin.[ch]
  - (bal) CVS ID touch up on sftp-int.c 
  - (bal) CVS ID touch up on uuencode.c
+ - (bal) CVS ID touch up on auth2.c, serverloop.c, session.c & sshd.c
  - (bal) OpenBSD CVS Sync
    - deraadt@cvs.openbsd.org 2001/02/17 23:48:48
      [sshd.8]
