--- a/ChangeLog
+++ b/ChangeLog
@@ -168,6 +168,7 @@
    - deraadt@cvs.openbsd.org 2001/03/04 18:21:28
      [sshd.8]
      list SSH2 ciphers
+ - (bal) Put HAVE_PW_CLASS_IN_PASSWD back into pwcopy()
 
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
