--- a/ChangeLog
+++ b/ChangeLog
@@ -169,6 +169,7 @@
      [sshd.8]
      list SSH2 ciphers
  - (bal) Put HAVE_PW_CLASS_IN_PASSWD back into pwcopy()
+ - (bal) Fix up logging since it changed.  removed log-*.c
 
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
