--- a/ChangeLog
+++ b/ChangeLog
@@ -170,6 +170,7 @@
      list SSH2 ciphers
  - (bal) Put HAVE_PW_CLASS_IN_PASSWD back into pwcopy()
  - (bal) Fix up logging since it changed.  removed log-*.c
+ - (djm) Fix up LOG_AUTHPRIV for systems that have it
 
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
