--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
    - deraadt@cvs.openbsd.org 2001/03/09 12:30:29
      [sshd.c]
      typo; slade@shore.net
+ - Removed log.o from sftp client.  Not needed.
 
 20010309
  - OpenBSD CVS Sync
