--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,7 @@
      [ssh-keygen.1 ssh-keygen.c]
      remove -v again. use -B instead for bubblebabble. make -B consistent
      with -l and make -B work with /path/to/known_hosts. ok deraadt@
+ - (djm) Bump portable version number for generating test RPMs
 
 20010311
  - OpenBSD CVS Sync
