--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@
      with -l and make -B work with /path/to/known_hosts. ok deraadt@
  - (djm) Bump portable version number for generating test RPMs
  - (djm) Add "static_openssl" RPM build option, remove rsh build dependency
+ - (bal) Reorder includes in Makefile. 
 
 20010311
  - OpenBSD CVS Sync
