--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
   - djm@cvs.openbsd.org 2001/03/13 22:42:54
     [sftp-client.c sftp-client.h sftp-glob.c sftp-glob.h sftp-int.c]
     sftp client filename globbing for get, put, ch{mod,grp,own}. ok markus@
+ - Fix strerror() in bsd-misc.c
 
 20010313
  - OpenBSD CVS Sync
