--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,11 @@
   - djm@cvs.openbsd.org 2001/03/13 22:42:54
     [sftp-client.c sftp-client.h sftp-glob.c sftp-glob.h sftp-int.c]
     sftp client filename globbing for get, put, ch{mod,grp,own}. ok markus@
- - Fix strerror() in bsd-misc.c
+ - (bal) Fix strerror() in bsd-misc.c
+ - (djm) Add replacement glob() from OpenBSD libc if the system glob is
+   missing or lacks the GLOB_ALTDIRFUNC extension
+ - (djm) Remove -I$(srcdir)/openbsd-compat from CFLAGS, refer to headers 
+   relatively. Avoids conflict between glob.h and /usr/include/glob.h
 
 20010313
  - OpenBSD CVS Sync
