--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    - markus@cvs.openbsd.org 2001/03/14 08:57:14
      [sftp-client.c]
      Wall
+ - (stevesk) ssh-keyscan.c: specify "openbsd-compat/fake-queue.h"
 
 20010314
  - OpenBSD CVS Sync
