--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
      [sftp-int.c]
      add version command
  - (stevesk) ssh-keyscan.c: specify "openbsd-compat/fake-queue.h"
+ - (bal) Cygwin README change by Corinna Vinschen <vinschen@redhat.com> 
 
 20010314
  - OpenBSD CVS Sync
