--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010317
+ - Support usrinfo() on AIX. Based on patch from Gert Doering 
+   <gert@greenie.muc.de>
+
 20010315
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/03/14 08:57:14
