- (djm) Add getusershell() functions from OpenBSD CVS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20010319
  - (djm) Seed PRNG at startup, rather than waiting for arc4random calls to 
    do it implicitly.
+ - (djm) Add getusershell() functions from OpenBSD CVS
 
 20010318
  - (bal) Fixed scp type casing issue which causes "scp: protocol error: 
