--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
  - (djm) Make scp work on systems without 64-bit ints
  - tim@mindrot.org 2001/03/18 18:28:39 [defines.h]
    move HAVE_LONG_LONG_INT where it works
+ - Use 'NGROUPS' for NeXT Since 'MAX_NGROUPS' is wrapped up in -lposix
+   stuff.  Change suggested by Mark Miller <markm@swoon.net>
 
 20010318
  - (bal) Fixed scp type casing issue which causes "scp: protocol error: 
