--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@
  - (bal) Use 'NGROUPS' for NeXT Since 'MAX_NGROUPS' is wrapped up in -lposix
    stuff.  Change suggested by Mark Miller <markm@swoon.net>
  - (bal) Small fix to scp.  %lu vs %ld
+ - (bal) NeXTStep lacks S_ISLNK.  Plus split up S_IS* 
 
 20010318
  - (bal) Fixed scp type casing issue which causes "scp: protocol error: 
