--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
    - markus@cvs.openbsd.org 2001/03/19 17:12:10
      [version.h]
      version 2.5.2
+ - (djm) Update RPM spec version
+ - (djm) Release 2.5.2p1
 
 20010319
  - (djm) Seed PRNG at startup, rather than waiting for arc4random calls to 
