change S_ISLNK macro to work for UnixWare 2.03

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
      version 2.5.2
  - (djm) Update RPM spec version
  - (djm) Release 2.5.2p1
+- tim@mindrot.org 2001/03/19 18:33:47 [defines.h]
+  change S_ISLNK macro to work for UnixWare 2.03
 
 20010319
  - (djm) Seed PRNG at startup, rather than waiting for arc4random calls to 
