--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 Programming:
 - Grep for 'XXX' comments and fix
 
+- Link order is incorrect for some systems using Kerberos 4 and AFS. Result
+is multiple inclusion of DES symbols.
+
 - Integrate contrib/mdoc2man.pl so platforms which only have the troff 
   'an' macros can have readable manpages.
 
