--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20010321
  - (djm) Fix ttyname breakage for AIX and Tru64. Patch from Steve 
    VanDevender <stevev@darkwing.uoregon.edu>
+ - (djm) Make sure pam_retval is initialised on call to pam_end. Patch
+   from Solar Designer <solar@openwall.com>
 
 20010320
  - (bal) glob.c update to added GLOB_LIMITS (OpenBSD CVS).
