--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    VanDevender <stevev@darkwing.uoregon.edu>
  - (djm) Make sure pam_retval is initialised on call to pam_end. Patch
    from Solar Designer <solar@openwall.com>
+ - (djm) Don't loop forever when changing password via PAM. Patch
+   from Solar Designer <solar@openwall.com>
 
 20010320
  - (bal) glob.c update to added GLOB_LIMITS (OpenBSD CVS).
