--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
    from Solar Designer <solar@openwall.com>
  - (djm) Don't loop forever when changing password via PAM. Patch
    from Solar Designer <solar@openwall.com>
+ - (djm) Generate config files before build
 
 20010320
  - (bal) glob.c update to added GLOB_LIMITS (OpenBSD CVS).
