--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20010322
  - (djm) Better AIX no tty fix, spotted by Gert Doering <gert@greenie.muc.de>
+ - (bal) version.c CVS ID resync
 
 20010321
  - (djm) Fix ttyname breakage for AIX and Tru64. Patch from Steve 
