--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20010322
  - (djm) Better AIX no tty fix, spotted by Gert Doering <gert@greenie.muc.de>
  - (bal) version.c CVS ID resync
+ - (bal) auth-chall.c auth-passwd.c auth.h auth1.c auth2.c session.c CVS ID
+   resync
 
 20010321
  - (djm) Fix ttyname breakage for AIX and Tru64. Patch from Steve 
