--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
  - (bal) version.c CVS ID resync
  - (bal) auth-chall.c auth-passwd.c auth.h auth1.c auth2.c session.c CVS ID
    resync
+ - (bal) scp.c CVS ID resync
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/03/20 19:10:16
      [readconf.c]
