--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
    - markus@cvs.openbsd.org 2001/03/23 14:28:32
      [session.c sshd.c]
      ignore SIGPIPE, restore in child, fixes x11-fwd crashes; with djm@
+ - (djm) Pull out our own SIGPIPE hacks
 
 20010323
  - OpenBSD CVS Sync                             
