--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    - stevesk@cvs.openbsd.org 2001/04/02 14:20:23
      [readconf.c servconf.c]
      correct comment; ok markus@
+ - (stevesk) nchan.c: remove ostate checks and add EINVAL to
+    shutdown(SHUT_RD) error() bypass for HP-UX.
 
 20010402
  - (stevesk) log.c openbsd sync; missing newlines
